Fix editUser not correctly cropping the upload avatar image to be a square. Fix client-side preview of new avatar image.

--- a/src/client/scss/components/_FormSettings.scss
+++ b/src/client/scss/components/_FormSettings.scss
@@ -22,6 +22,7 @@
 		&--avatar {
 			.avatar__image {
 				border: none;
+				object-fit: cover;
 			}
 		}
 		&--banner {
